--- a/kinematica/basis_versnelling.tex
+++ b/kinematica/basis_versnelling.tex
@@ -13,9 +13,13 @@ Een synoniem voor het woord versnelling is \textit{acceleratie}, dat het symbool
 Acceleratie is soms handiger om te gebruiken, dat vermijdt verwarring met het begrip snelheid, wat helemaal niet hetzelfde is!
 
 
-\(\vec{v}\) = velocity = vitesse = snelheid
+\[
+\begin{array}{l}
+\vec{v} = \text{velocity = vitesse = snelheid} \\
+\vec{a} = \text{acceleration = acceleratie = versnelling = snelheids\textbf{verandering}}
+\end{array}
+\]
 
-\(\vec{a}\) = acceleration = acceleratie = versnelling = snelheids\textbf{verandering}
 
 De vector \(\vec{a}\) grijpt aan op het versnellend voorwerp en wijst in de zin van de ogenblikkelijke bewegings\textbf{verandering}.
 
@@ -29,7 +33,8 @@ De eenheid van versnelling is meter per seconde, per seconde -- wat meter per se
 
 \end{definition}
 
-Als de snelheid van een voorwerp wijzigt, dan wijzigt uiteraard ook de snelheidsvector. Afhankelijk van welk kenmerk van de snelheidsvector (en dus ook van de beweging) verandert, maakt men een onderscheid tussen twee verschillende soorten versnellingen:
+Als de snelheid van een voorwerp wijzigt, dan wijzigt ook de snelheidsvector. 
+Afhankelijk van welk kenmerk van de snelheidsvector (en dus ook van de beweging) verandert, maakt men een onderscheid tussen twee verschillende soorten versnellingen:
 
 
 \begin{definition}
@@ -94,7 +99,9 @@ Een verticaal omhoog geworpen basketbal versnelt tangentieel, de bal gaat eerst 
 		
 		\fill[red] ([yshift=2cm]M) circle (2pt);
 		\draw[->, red, very thick, -latex] ([yshift=2cm]M) --++ (0,-1) node[thick, midway, left, red]{\(\Delta \vec{v}\)};
-	
+
+
+		\node at (2,1) {\textbf{Bal vliegt verticaal omhoog}};
 	\end{tikzpicture}
 	\hspace{1cm}
 	\begin{tikzpicture}[scale=1]
@@ -148,6 +155,9 @@ Een verticaal omhoog geworpen basketbal versnelt tangentieel, de bal gaat eerst 
 		
 		\fill[red] ([yshift=-1cm]M) circle (2pt);
 		\draw[->, red, very thick, -latex] ([yshift=-1cm]M) --++ (0,-1) node[thick, midway, left, red]{\(\Delta \vec{v}\)};
+
+		\node at (2,0) {\textbf{Bal vliegt verticaal naar beneden}};
+
 	
 	\end{tikzpicture}
 	
@@ -164,11 +174,12 @@ Een auto trekt op een rechte weg op met een versnelling van \SI{3}{\meter\per\se
 Als een basketbal botst op de grond verandert de snelheidsvector ook van \textit{zin}. 
 Maar een tekening met vectoren net voor en na de bots.  
 \begin{oplossing}
+	\begin{image}
 	\begin{tikzpicture}[scale=1]
 
 		% \draw[step=1cm, gray!50, very thin] (0,-4) grid (10,4);
 	
-		\draw[thick,->] (0,0) -- (10,0) node[right] {$x$};
+		\draw[thick,->] (0,0) -- (10,0) node[right] {};
 		% \draw[thick,->] (0,-5) -- (0,5) node[above] {$y$};
 	
 		% \foreach \x in {1,...,10}
@@ -184,21 +195,21 @@ Maar een tekening met vectoren net voor en na de bots.
 		\coordinate (B4) at (9, 0.5); 
 	
 		 
-		\node[opacity=1] (Bal1) at (B1) {\includegraphics[width=1cm]{basketbal}};
+		\node[opacity=1, label={[label distance=15pt]above:Vlak voor de bots}] (Bal1) at (B1) {\includegraphics[width=1cm]{basketbal}};
 		\fill[blue] (B1) circle (2pt);
 		\draw[->, blue, very thick, -latex] (B1) --++ (0,-2) node[thick, midway, left, blue]{\(\vec{v}_1\)};
 		
-		\node[opacity=1] (Bal2) at (B2) {\includegraphics[width=1cm]{basketbal}};
+		\node[opacity=1, label= {[label distance=24pt]above:Vlak na de bots}] (Bal2) at (B2) {\includegraphics[width=1cm]{basketbal}};
 		\fill[blue] (B2) circle (2pt);
 		\draw[->, blue, very thick, -latex] (B2) --++ (0,1) node[thick, pos=0.8, left, blue]{\(\vec{v}_2\)};
 		
-		\node[opacity=1] (Bal3) at (B3) {\includegraphics[width=1cm]{basketbal}};
+		\node[opacity=1, label= {[label distance=24pt]above:Bij begin bots}] (Bal3) at (B3) {\includegraphics[width=1cm]{basketbal}};
 		\fill[blue] (B3) circle (2pt);
 		\draw[->, blue, very thick, -latex] (B3) --++ (0,-2) node[thick, midway, left, blue]{\(\vec{v}_1\)};
 		\fill[xmgreen] ([xshift=0.2cm]B3) circle (2pt);
 		\draw[->, xmgreen, very thick, -latex] ([xshift=0.2cm]B3) --++ (0,1.5) node[thick, midway, right, xmgreen]{\(\vec{a}\)};
 		
-		\node[opacity=1] (Bal4) at (B4) {\includegraphics[width=1cm]{basketbal}};
+		\node[opacity=1, label= {[label distance=24pt]above:Bij einde bots}] (Bal4) at (B4) {\includegraphics[width=1cm]{basketbal}};
 		\fill[blue] (B4) circle (2pt);
 		\draw[->, blue, very thick, -latex] (B4) --++ (0,1) node[thick, pos=0.8, left, blue]{\(\vec{v}_2\)};
 		\fill[xmgreen] ([xshift=0.2cm]B4) circle (2pt);
@@ -215,9 +226,10 @@ Maar een tekening met vectoren net voor en na de bots.
 		\draw[->, blue, very thick, -latex] (M) --++ (0,-2) node[thick, midway, left, blue]{\(\vec{v}_1\)};
 		
 		\fill[red] ([xshift=0.2cm, yshift=-2cm]M) circle (2pt);
-		\draw[->, red, very thick, -latex] ([xshift=0.2cm, yshift=-2cm]M) --++ (0,3) node[thick, midway, right, red]{\(\Delta \vec{v}\)};
+		\draw[->, red, very thick, -latex] ([xshift=0.2cm, yshift=-2cm]M) --++ (0,3) node[thick, pos=0.6, right, red]{\(\Delta \vec{v}\)};
 	
 	\end{tikzpicture}
+	\end{image}
 \end{oplossing}
 \end{question}
 \begin{question}
@@ -239,7 +251,8 @@ De snelheidsvector is enkel in de grootte en zin gewijzigd.
 % \end{itemize}
 
 \begin{definition}
-Als enkel de \textit{richting} van de snelheidsvector verandert, spreekt men over een \textbf{normale versnelling \(\vec{a_n}\)}. In dit geval staat de versnellingsvector normaal of loodrecht op de snelheidsvector. Dit komt voor bij tweedimensionale cirkelbewegingen waarbij de grootte van de snelheid onveranderd blijft.
+Als de \textit{richting} van de snelheidsvector verandert, spreekt men over een \textbf{normale versnelling \(\vec{a_n}\)}. 
+In dit geval staat de versnellingsvector normaal of loodrecht op de snelheidsvector. Dit komt voor bij tweedimensionale cirkelbewegingen waarbij de grootte van de snelheid onveranderd blijft.
 \end{definition}
 
 \begin{example}
@@ -392,7 +405,7 @@ De gemiddelde versnelling \(\overline{a}\) geeft de verandering in snelheid \tex
 	% \begin{image}
 	% \includegraphics{versnellingmetgrafiek}
 	% \end{image}
-\subsection*{Ogenblikkelijke versnelling bij ééndimensionale bewegingen}
+\subsection*{Ogenblikkelijke versnelling bij tweedimensionale bewegingen}
 	
 In twee dimensies, kan men de versnelling opsplitsen in loodrechte x- en y-componenten. Daarmee kan men analoge redeneringen en gelijkaardige formules maken zoals in het 1D geval.
 	
@@ -407,36 +420,145 @@ Scalair rekent men met de versnellingscomponenten $a_x$ en $a_y$.
 De totale versnelling heeft het symbool $a$. 
 Bij 2D bewegingen is er altijd normale versnelling (mogelijk in combinatie met tangentiële versnelling).
 
-Vectoriële notatie en definitie:
+
+
+\begin{definition}
 	
-\[
-\langle \vec{a} \rangle = \frac{\Delta \vec{v}}{\Delta t}
-\]
+	De \textbf{versnellingsvector \(\vec{a}\)} van een bewegend punt wordt gedefinieerd als de afgeleide van de snelheidsvector naar de tijd:
+	
+	\[
+	\vec{a}(t) = \frac{d\vec{v}(t)}{dt},
+	\]
+	
+	en kan worden opgesplitst in versnellingscomponenten \(a_x\) en \(a_y\):
+	
+	\[
+		\vec{a} = \frac{d\vec{v}}{dt} = \frac{d}{dt}(v_x \cdot \vec{e}_x + v_y \cdot \vec{e}_y) = \frac{dv_x}{dt} \cdot \vec{e}_x + \frac{dv_y}{dt} \cdot \vec{e}_y = \vec{a}_x + \vec{a}_y
+	\]
+	
+	De grootte van de totale versnelling wordt genoteerd met het symbool \(a\) en is gelijk aan 
+	\[
+	a = \| \vec{a}\| = \sqrt{(\vec{a}_x)^2 + (\vec{a}_y)^2}
+	\]
+	
+	\begin{image}[0.5\textwidth]
+		\begin{tikzpicture}
+			\draw[->] (-0.5,0) -- (3,0) node[right] {$x$};
+			\draw[->] (0,-0.5) -- (0,3) node[above] {$y$};
+			\coordinate (O) at (0,0);
+	
+			\pgfmathsetmacro{\r}{3}       
+			\pgfmathsetmacro{\ang}{45} 
+	
+			\coordinate (A) at (\ang :\r);
+	
+			\fill (A) circle (2pt);
+		
+			\draw[->, very thick, blue, -latex] (O) -- (A) node[midway, below right] { $\vec{r}$};
+	
+			% Versnellingsvector tekenen
+			\draw[->, very thick, xmgreen, -latex] 			(A) --++ (1, -1) node[pos=0.8, right, xshift=6pt]{ $\vec{a}$ versnellingsvector};
+			\draw[->, very thick, xmgreen, dotted, -latex] 	(A) --++ (1, 0) node[midway, above right] { $\vec{a}_x$};
+			\draw[->, very thick, xmgreen, dotted, -latex] 	(A) --++ (0, -1) node[pos=0.8, left ] { $\vec{a}_y$};
+	
+			\draw[->, thick, red, transform canvas={shift={(-0.05,-0.05)}}] (O) -- (0.5,0) node[midway, below] {$\vec{e}_x$};
+			\draw[->, thick, red, transform canvas={shift={(-0.05,-0.05)}}] (O) -- (0,0.5) node[midway, left] {$\vec{e}_y$};
+		\end{tikzpicture}
+	\end{image}
+	\captionof{figure}{Een versnellingsvector \(\vec{a}\)}
+		
+	\end{definition}
 
-\[
-\vec{a} = \frac{d\vec{v}}{dt} 
-= \frac{d}{dt}(v_x \cdot \vec{e}_x + v_y \cdot \vec{e}_y) 
-= \frac{dv_x}{dt} \cdot \vec{e}_x + \frac{dv_y}{dt} \cdot \vec{e}_y 
-= \vec{a}_x + \vec{a}_y
-\]
+\begin{remark}
+	In bovenstaande figuur werd 'in het algemene geval' een versnellingsvector getekent als vector die aangrijpt op de puntmassa. 
+	In de bewegingen die we zullen bestuderen zal de versnellingsvector veroorzaakt zijn door de zwaartekracht of trekkracht. 
+	Bijgevolg is de richting verticaal of in de richting van de positievector.   
 
-Scalaire notatie ens definitie:
+	\begin{image}
+		\begin{tikzpicture}
+			\draw[->] (-0.5,0) -- (3,0) node[right] {$x$};
+			\draw[->] (0,-0.5) -- (0,3) node[above] {$y$};
+			\coordinate (O) at (0,0);
+	
+			\pgfmathsetmacro{\r}{3}       
+			\pgfmathsetmacro{\ang}{45} 
+	
+			\coordinate (A) at (\ang :\r);
+	
+			\fill (A) circle (2pt);
+		
+			\draw[->, very thick, blue, -latex] (O) -- (A) node[midway, below right] { $\vec{r}$};
+	
+			% Versnellingsvector tekenen
+			\fill[xmgreen] ([yshift=3pt]A) circle (2pt);
+			\draw[->, very thick, xmgreen, -latex] 			(A) --++ (0, -1) node[pos=0.8, right, xshift=6pt]{ $\vec{a}$ };
+			% \draw[->, very thick, xmgreen, dotted, -latex] 	(A) --++ (1, 0) node[midway, above right] { $\vec{a}_x$};
+			% \draw[->, very thick, xmgreen, dotted, -latex] 	(A) --++ (0, -1) node[pos=0.8, left ] { $\vec{a}_y$};
+	
+			\draw[->, thick, red, transform canvas={shift={(-0.05,-0.05)}}] (O) -- (0.5,0) node[midway, below] {$\vec{e}_x$};
+			\draw[->, thick, red, transform canvas={shift={(-0.05,-0.05)}}] (O) -- (0,0.5) node[midway, left] {$\vec{e}_y$};
 
-\[
-a_x(t) = a_x = \frac{dv_x}{dt} = \frac{d^2x}{dt^2}
-\]
+			\node at (2,4) {De versnelling door de zwaartekracht};
+		\end{tikzpicture}
+		\hspace{1cm}
+		\begin{tikzpicture}
+			\draw[->] (-0.5,0) -- (3,0) node[right] {$x$};
+			\draw[->] (0,-0.5) -- (0,3) node[above] {$y$};
+			\coordinate (O) at (0,0);
+	
+			\pgfmathsetmacro{\r}{3}       
+			\pgfmathsetmacro{\ang}{45} 
+	
+			\coordinate (A) at (\ang :\r);
+	
+			\fill (A) circle (2pt);
+		
+			\draw[->, very thick, blue, -latex] (O) -- (A) node[midway, below right] { $\vec{r}$};
+	
+			% Versnellingsvector tekenen
+			\fill[xmgreen] ([yshift=3pt]A) circle (2pt);
+			\draw[->, very thick, xmgreen, -latex] ([yshift=3pt]A) --++ (-1, -1) node[pos=0.8, above left, xshift=6pt]{ $\vec{a}$ };
+			% \draw[->, very thick, xmgreen, dotted, -latex] 	(A) --++ (-1, 0) node[midway, above right] { $\vec{a}_x$};
+			% \draw[->, very thick, xmgreen, dotted, -latex] 	(A) --++ (0, -1) node[pos=0.8, left ] { $\vec{a}_y$};
+	
+			\draw[->, thick, red, transform canvas={shift={(-0.05,-0.05)}}] (O) -- (0.5,0) node[midway, below] {$\vec{e}_x$};
+			\draw[->, thick, red, transform canvas={shift={(-0.05,-0.05)}}] (O) -- (0,0.5) node[midway, left] {$\vec{e}_y$};
 
-\[
-a_y(t) = a_y = \frac{dv_y}{dt} = \frac{d^2y}{dt^2}
-\]
+			\node at (2,4) {De versnelling door de trekkracht};
+		\end{tikzpicture}
+	\end{image}
+\end{remark}
 
-\[
-\langle a \rangle = \frac{\Delta v}{\Delta t}
-\]
+% Vectoriële notatie en definitie:
+	
+% \[
+% \langle \vec{a} \rangle = \frac{\Delta \vec{v}}{\Delta t}
+% \]
 
-\[
-a = \sqrt{a_x^2 + a_y^2}
-\]
+% \[
+% \vec{a} = \frac{d\vec{v}}{dt} 
+% = \frac{d}{dt}(v_x \cdot \vec{e}_x + v_y \cdot \vec{e}_y) 
+% = \frac{dv_x}{dt} \cdot \vec{e}_x + \frac{dv_y}{dt} \cdot \vec{e}_y 
+% = \vec{a}_x + \vec{a}_y
+% \]
+
+% Scalaire notatie ens definitie:
+
+% \[
+% a_x(t) = a_x = \frac{dv_x}{dt} = \frac{d^2x}{dt^2}
+% \]
+
+% \[
+% a_y(t) = a_y = \frac{dv_y}{dt} = \frac{d^2y}{dt^2}
+% \]
+
+% \[
+% \langle a \rangle = \frac{\Delta v}{\Delta t}
+% \]
+
+% \[
+% a = \sqrt{a_x^2 + a_y^2}
+% \]
 
 
 \begin{remark}
