--- a/kinematica/basis_intro.tex
+++ b/kinematica/basis_intro.tex
@@ -41,12 +41,13 @@ We zullen zien dat krachten eigenlijk alleen maar de \textit{veranderingen van b
 Als je een krijtje gooit naar het bord, kan je je daarover allerlei vragen stellen:
 \begin{itemize}
 \item Vliegt dat krijtje in een rechte lijn naar het bord? Of eerder in een cirkelbaan? Of misschien een ellips? Of nog een andere vorm? 
-\item Hoe snel vliegt het krijtje? Vertraagt het tijdens zijn vlucht omdat het kracht verliest, of versnelt het eerder omdat het ook wat naar beneden valt? 
+\item Hoe snel vliegt het krijtje? Vertraagt het tijdens zijn vlucht, of versnelt het eerder omdat het ook wat naar beneden valt? 
+% de zin 'Vertraagt het tijdens zijn vlucht omdat het kracht verliest' zie ik niet graag staan, het suggereert dat een misvatting juist zou zijn. Krachten kan je -- i.t.t. energie -- niet bezitten. Je kan die dus ook niet verliezen. Het is een misvatting waar het moeilijk tegen strijden is, vandaar dat ik ze zeker niet op papier ergens op een suggestieve manier zou zetten. Ik haal ze voorlopig weg ...
 \item Als de leerkracht het laatste stukje van de baan van het krijtje nauwkeurig heeft geregistreerd, kan hij dan weten welke leerling gegooid heeft?
 % \item Als je uitglijdt en valt net bij het gooien, gaat het krijtje dan ook sneller naar beneden vallen?
 \item Vliegen lange en korte krijtjes even snel? Vliegen witte en rode krijtjes even snel? Vliegen krijtjes met een scherpe punt sneller?
 \item Mag je eigenlijk wel met krijtjes gooien?
-% \item Is dit voorbeeld niet erg verouderd in deze tijden van electronische borden? Kan je met stiften gooien? Mag dat? Zal ChatGPT ooit met krijtjes kunnen gooien?
+% \item Is dit voorbeeld niet erg verouderd in deze tijden van elektronische borden? Kan je met stiften gooien? Mag dat? Zal ChatGPT ooit met krijtjes kunnen gooien?
 \item Als je snel genoeg gooit, en opzettelijk het bord mist, is het dan theoretisch mogelijk om het krijtje in een baan om de aarde te krijgen? Hoe snel zou je moeten gooien? 
 \end{itemize}  
 
